--- a/inmobiliaria/index.html
+++ b/inmobiliaria/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Inmobiliaria moderna. Compra, venta y alquiler de propiedades.">
+  <meta name="description" content="">
   <link rel="icon" href="assets/favicon.ico" sizes="any">
   <title>Inmobiliaria</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
