--- a/inmobiliaria/propiedades.html
+++ b/inmobiliaria/propiedades.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Listado de propiedades: casas, departamentos y oficinas.">
+  <meta name="description" content="">
   <link rel="icon" href="assets/favicon.ico" sizes="any">
   <title> Inmobiliaria</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
