--- a/inmobiliaria/index.html
+++ b/inmobiliaria/index.html
@@ -30,8 +30,8 @@
   <main class="container">
     <section class="hero" aria-label="Banner de portada">
       <div class="hero-inner">
-        <h1>texto</h1>
-        <p>texto</p>
+        <h1>Catalogo de Propiedades</h1>
+        <p>Calidad y Precio</p>
         <p class="mt-3">
           <a class="cta" href="propiedades.html">Ver propiedades </a>
         </p>
@@ -42,27 +42,27 @@
       <h2>Propiedades destacadas</h2>
       <div class="grid cards-3">
         <article class="card">
-          <img class="card-media" src="assets/images/" alt="" width="640" height="400" loading="lazy">
+          <img class="card-media" src="assets/images/propiedad_1.webp" alt="" width="640" height="400" loading="lazy">
           <div class="card-body">
             <h3 class="card-title">Casa grande </h3>
-            <p class="card-meta">ejemplo descripcion</p>
-            <p class="price">precio $000.000.000</p>
+            <p class="card-meta">Maravillosa casa a las afueras de Rosario</p>
+            <p class="price">precio $300.000.00</p>
           </div>
         </article>
         <article class="card">
-          <img class="card-media" src="assets/images/" alt="" width="640" height="400" loading="lazy">
+          <a href="nosotros.html"><img class="card-media" src="assets/images/propiedad_2.webp" alt="" width="640" height="400" loading="lazy"></a>
           <div class="card-body">
-            <h3 class="card-title"></h3>
-            <p class="card-meta"></p>
-            <p class="price"></p>
+            <h3 class="card-title">Departamento acogedor</h3>
+            <p class="card-meta">Un departamento grande en pleno centro</p>
+            <p class="price">precio $220.000.00</p>
           </div>
         </article>
         <article class="card">
-          <img class="card-media" src="assets/images/" alt="" width="640" height="400" loading="lazy">
+          <img class="card-media" src="assets/images/propiedad_3.webp" alt="" width="640" height="400" loading="lazy">
           <div class="card-body">
-            <h3 class="card-title"></h3>
-            <p class="card-meta"></p>
-            <p class="price"></p>
+            <h3 class="card-title">Casa de vacaciones</h3>
+            <p class="card-meta">Casa para vacacionar con gran espacio y aspecto rustico</p>
+            <p class="price">Precio $270.000.00</p>
           </div>
         </article>
       </div>
@@ -73,20 +73,20 @@
       <div class="grid cards-3">
         <article class="card">
           <div class="card-body">
-            <h3 class="card-title"></h3>
-            <p class="card-meta"></p>
+            <h3 class="card-title">Calidad</h3>
+            <p class="card-meta">contamos con multiples propiedades de la primera calidad y linea para la compra </p>
           </div>
         </article>
         <article class="card">
           <div class="card-body">
-            <h3 class="card-title"></h3>
-            <p class="card-meta"></p>
+            <h3 class="card-title">Eficacia</h3>
+            <p class="card-meta">Somos los mejores en la industria inmobiliria y lo demostramos en la forma de nuestro trabajo</p>
           </div>
         </article>
         <article class="card">
           <div class="card-body">
-            <h3 class="card-title"></h3>
-            <p class="card-meta"></p>
+            <h3 class="card-title">Confiabilidad</h3>
+            <p class="card-meta">100% seguro y garantizado, su inversion de hoy es la recompensa del mañana </p>
           </div>
         </article>
       </div>
@@ -95,10 +95,8 @@
 
   <footer class="site-footer">
     <div class="container footer-grid">
-      <p> Inmobiliaria 
-      <p class="footer-social">
-       
-      </p>
+      <p> Inmobiliaria</p>
+      <p class="footer-social"><a href="index.html" >Todos los derechos de copyright de inmobiliaria</a></p>
     </div>
   </footer>
 </body>
