footer,Nosotros.html,propiedades Cards en json

--- a/inmobiliaria/index.html
+++ b/inmobiliaria/index.html
@@ -93,11 +93,7 @@
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <p> Inmobiliaria</p>
-      <p class="footer-social"><a href="index.html" >Todos los derechos de copyright de inmobiliaria</a></p>
-    </div>
-  </footer>
+  <div id="footer-placeholder"></div>
+  <script src="js/footer.js" defer></script>
 </body>
 </html>
