--- a/inmobiliaria/nosotros.html
+++ b/inmobiliaria/nosotros.html
@@ -30,22 +30,109 @@
   <main class="container">
     <section class="section">
       <h1>Quiénes somos</h1>
-
+      <p class="intro" style="color: var(--color-muted); max-width: 70ch;">
+        Somos una inmobiliaria enfocada en acercarte a tu próxima propiedad con
+        transparencia, rapidez y un servicio cercano. Creemos en las relaciones a
+        largo plazo y en la confianza como base de cada operación.
+      </p>
     </section>
 
     <section class="section">
-      <h2>Ejemploas dqwjeh</h2>
+      <h2>Nuestra misión y valores</h2>
+      <div class="grid cards-2">
+        <article class="card">
+          <div class="card-body">
+            <h3 class="card-title">Misión</h3>
+            <p class="card-meta">
+              Brindar experiencias inmobiliarias simples y seguras, combinando
+              tecnología y asesoramiento humano para que encontrar o vender una
+              propiedad sea un proceso claro y satisfactorio.
+            </p>
+          </div>
+        </article>
+        <article class="card">
+          <div class="card-body">
+            <h3 class="card-title">Visión</h3>
+            <p class="card-meta">
+              Ser referentes en atención y calidad, impulsando la innovación en el
+              sector para ofrecer información confiable y decisiones más inteligentes.
+            </p>
+          </div>
+        </article>
+        <article class="card">
+          <div class="card-body">
+            <h3 class="card-title">Valores</h3>
+            <p class="card-meta">
+              Transparencia, compromiso, agilidad y cercanía. Trabajamos para que cada
+              paso sea claro y estés acompañado en todo momento.
+            </p>
+          </div>
+        </article>
+        <article class="card">
+          <div class="card-body">
+            <h3 class="card-title">Lo que nos distingue</h3>
+            <p class="card-meta">
+              Portafolio curado, fotos de calidad y datos precisos. Coordinamos
+              visitas, tasaciones y gestiones para que no te preocupes por nada.
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
 
+    <section class="section">
+      <h2>Números que nos respaldan</h2>
+      <div class="grid cards-2">
+        <article class="card">
+          <div class="card-body">
+            <h3 class="card-title">+300 operaciones</h3>
+            <p class="card-meta">Ventas y alquileres concretados con éxito.</p>
+          </div>
+        </article>
+        <article class="card">
+          <div class="card-body">
+            <h3 class="card-title">+10 años</h3>
+            <p class="card-meta">Trabajando en equipo dentro del mercado local.</p>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>Conocé al equipo</h2>
+      <div class="team">
+        <div class="member">
+          <img class="avatar" src="assets/images/AN.jpeg" alt="Foto de Ana" loading="lazy">
+          <h3>Ana Pérez</h3>
+          <p class="role">Asesora comercial</p>
+        </div>
+        <div class="member">
+          <img class="avatar" src="assets/images/ml.jpeg" alt="Foto de Martín" loading="lazy">
+          <h3>Martín López</h3>
+          <p class="role">Tasaciones y análisis</p>
+        </div>
+        <div class="member">
+          <img class="avatar" src="assets/images/SG.webp" alt="Foto de Sofía" loading="lazy">
+          <h3>Sofía García</h3>
+          <p class="role">Atención al cliente</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="card" style="text-align:center;">
+        <div class="card-body">
+          <h2 class="card-title">¿Te ayudamos a encontrar tu propiedad?</h2>
+          <p class="card-meta">Escribinos y coordinemos una reunión sin cargo.</p>
+          <p style="margin-top: .75rem;">
+            <a class="cta" href="contacto.html">Contactar ahora</a>
+          </p>
+        </div>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <p> Inmobiliaria 
-      <p class="footer-social">
-       
-      </p>
-    </div>
-  </footer>
+  <div id="footer-placeholder"></div>
+  <script src="js/footer.js" defer></script>
 </body>
 </html>
