--- a/inmobiliaria/contacto.html
+++ b/inmobiliaria/contacto.html
@@ -101,15 +101,9 @@
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <p> Inmobiliaria
-      <p class="footer-social">
-      </p>
-    </div>
-  </footer>
-  <script src="contacto.js"></script>
-
+  <div id="footer-placeholder"></div>
+  <script src="js/footer.js" defer></script>
+  <script src="js/contacto.js"></script>
 
 </body>
 
