--- a/inmobiliaria/footer.html
+++ b/inmobiliaria/footer.html
@@ -5,22 +5,31 @@
         <div class="brand">Inmobiliaria</div>
         <p>Calidad y Precio</p>
       </div>
-  
+
       <nav class="footer-nav" aria-label="Navegación del pie">
         <a href="index.html">Inicio</a>
         <a href="propiedades.html">Propiedades</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="contacto.html">Contacto</a>
       </nav>
-  
+
+      <div class="footer-map" aria-label="Ubicación">
+        <iframe
+          title="Ubicación en mapa"
+          src="https://www.google.com/maps?q=Monumento+a+la+Bandera,+Rosario,+Santa+Fe&output=embed"
+          width="100%" height="220" style="border:0; border-radius: 10px;"
+          allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+
       <div class="footer-social">
         <a href="#" aria-label="Instagram">Instagram</a>
         <a href="#" aria-label="Facebook">Facebook</a>
         <a href="#" aria-label="X/Twitter">X</a>
       </div>
     </div>
-  
+
     <div class="container footer-bottom">
-      <p>© 2025 Inmobiliaria. Todos los derechos reservados.</p>
+      <p> 2025 Inmobiliaria. Todos los derechos reservados.</p>
     </div>
   </footer>
