--- a/inmobiliaria/index.html
+++ b/inmobiliaria/index.html
@@ -28,10 +28,83 @@
   </header>
 
   <main class="container">
+    
+    <section class="section" aria-label="Introducción">
+      <div class="card">
+        <div class="card-body">
+          <h2>Tu aliado inmobiliario</h2>
+          <p class="card-meta" style="max-width: 75ch;">
+            Te ayudamos a comprar, vender o alquilar con procesos simples y asesoramiento cercano.
+            Explora nuestro catálogo y conocé por qué cada vez más clientes nos eligen.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>Un porque elegirnos(?)</h2>
+      <div class="grid cards-3">
+        <article class="card">
+          <img class="card-media" src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?q=80&w=1200&auto=format&fit=crop" alt="Llaves de casa nueva" loading="lazy">
+          <div class="card-body">
+            <h3 class="card-title">Calidad</h3>
+            <p class="card-meta">contamos con multiples propiedades de la primera calidad y linea para la compra </p>
+          </div>
+        </article>
+        <article class="card">
+          <img class="card-media" src="https://images.unsplash.com/photo-1526455192312-1436e1b03654?q=80&w=1200&auto=format&fit=crop" alt="Agente inmobiliario atendiendo clientes" loading="lazy">
+          <div class="card-body">
+            <h3 class="card-title">Eficacia</h3>
+            <p class="card-meta">Somos los mejores en la industria inmobiliria y lo demostramos en la forma de nuestro trabajo</p>
+          </div>
+        </article>
+        <article class="card">
+          <img class="card-media" src="https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=1200&auto=format&fit=crop" alt="Apretón de manos de confianza" loading="lazy">
+          <div class="card-body">
+            <h3 class="card-title">Confiabilidad</h3>
+            <p class="card-meta">100% seguro y garantizado, su inversion de hoy es la recompensa del mañana </p>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section class="section" aria-label="Servicios principales">
+      <h2>Nuestros servicios</h2>
+      <div class="grid cards-3">
+        <article class="card">
+          <img class="card-media" src="https://images.unsplash.com/photo-1484154218962-a197022b5858?q=80&w=1200&auto=format&fit=crop" alt="Visita a propiedad para comprar" loading="lazy">
+          <div class="card-body">
+            <h3 class="card-title">Compra</h3>
+            <p class="card-meta">Te acompañamos en cada paso para encontrar la propiedad ideal y cerrar con tranquilidad.</p>
+          </div>
+        </article>
+        <article class="card">
+          <img class="card-media" src="https://images.unsplash.com/photo-1570129477492-45c003edd2be?q=80&w=1200&auto=format&fit=crop" alt="Firma de contrato de venta" loading="lazy">
+          <div class="card-body">
+            <h3 class="card-title">Venta</h3>
+            <p class="card-meta">Tasación profesional, publicación destacada y negociación para maximizar tu retorno.</p>
+          </div>
+        </article>
+        <article class="card">
+          <img class="card-media" src="https://images.unsplash.com/photo-1501183638710-841dd1904471?q=80&w=1200&auto=format&fit=crop" alt="Departamento en alquiler" loading="lazy">
+          <div class="card-body">
+            <h3 class="card-title">Alquiler</h3>
+            <p class="card-meta">Opciones verificadas y procesos claros para inquilinos y propietarios.</p>
+          </div>
+        </article>
+        <article class="card">
+          <img class="card-media" src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?q=80&w=1200&auto=format&fit=crop" alt="Asesoría inmobiliaria personalizada" loading="lazy">
+          <div class="card-body">
+            <h3 class="card-title">Asesoría</h3>
+            <p class="card-meta">Análisis del mercado, documentación y gestión integral para decisiones seguras.</p>
+          </div>
+        </article>
+      </div>
+    </section>
     <section class="hero" aria-label="Banner de portada">
       <div class="hero-inner">
-        <h1>Catalogo de Propiedades</h1>
-        <p>Calidad y Precio</p>
+        <h1>Encontrá tu próximo hogar</h1>
+        <p>Transacciones seguras, asesoramiento cercano y resultados reales.</p>
         <p class="mt-3">
           <a class="cta" href="propiedades.html">Ver propiedades </a>
         </p>
@@ -42,51 +115,27 @@
       <h2>Propiedades destacadas</h2>
       <div class="grid cards-3">
         <article class="card">
-          <img class="card-media" src="assets/images/propiedad_1.webp" alt="" width="640" height="400" loading="lazy">
+          <img class="card-media" src="assets/images/propiedad_1.webp" alt="Casa grande en las afueras de Rosario" width="640" height="400" loading="lazy">
           <div class="card-body">
-            <h3 class="card-title">Casa grande </h3>
+            <h3 class="card-title">Casa grande</h3>
             <p class="card-meta">Maravillosa casa a las afueras de Rosario</p>
-            <p class="price">precio $300.000.00</p>
+            <p class="price">Precio $300.000.00</p>
           </div>
         </article>
         <article class="card">
-          <a href="nosotros.html"><img class="card-media" src="assets/images/propiedad_2.webp" alt="" width="640" height="400" loading="lazy"></a>
+          <a href="nosotros.html"><img class="card-media" src="assets/images/propiedad_2.webp" alt="Departamento céntrico" width="640" height="400" loading="lazy"></a>
           <div class="card-body">
             <h3 class="card-title">Departamento acogedor</h3>
             <p class="card-meta">Un departamento grande en pleno centro</p>
-            <p class="price">precio $220.000.00</p>
+            <p class="price">Precio $220.000.00</p>
           </div>
         </article>
         <article class="card">
-          <img class="card-media" src="assets/images/propiedad_3.webp" alt="" width="640" height="400" loading="lazy">
+          <img class="card-media" src="assets/images/propiedad_3.webp" alt="Casa de vacaciones estilo rústico" width="640" height="400" loading="lazy">
           <div class="card-body">
             <h3 class="card-title">Casa de vacaciones</h3>
-            <p class="card-meta">Casa para vacacionar con gran espacio y aspecto rustico</p>
+            <p class="card-meta">Casa para vacacionar con gran espacio y aspecto rústico</p>
             <p class="price">Precio $270.000.00</p>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <section class="section">
-      <h2>Un porque elegirnos(?)</h2>
-      <div class="grid cards-3">
-        <article class="card">
-          <div class="card-body">
-            <h3 class="card-title">Calidad</h3>
-            <p class="card-meta">contamos con multiples propiedades de la primera calidad y linea para la compra </p>
-          </div>
-        </article>
-        <article class="card">
-          <div class="card-body">
-            <h3 class="card-title">Eficacia</h3>
-            <p class="card-meta">Somos los mejores en la industria inmobiliria y lo demostramos en la forma de nuestro trabajo</p>
-          </div>
-        </article>
-        <article class="card">
-          <div class="card-body">
-            <h3 class="card-title">Confiabilidad</h3>
-            <p class="card-meta">100% seguro y garantizado, su inversion de hoy es la recompensa del mañana </p>
           </div>
         </article>
       </div>
