--- a/inmobiliaria/nosotros.html
+++ b/inmobiliaria/nosotros.html
@@ -38,6 +38,21 @@
     </section>
 
     <section class="section">
+      <h2>Nuestra historia</h2>
+      <div class="card">
+        <div class="card-body">
+          <p class="card-meta">
+            Nacimos con el objetivo de simplificar el mercado inmobiliario local. Comenzamos como un pequeño
+            equipo enfocado en brindar asesoramiento honesto y un servicio ágil. Con el tiempo, fuimos
+            incorporando tecnología, ampliando nuestro portafolio y fortaleciendo alianzas estratégicas para
+            ofrecer una experiencia cada vez más completa. Hoy acompañamos a clientes en compra, venta y alquiler,
+            manteniendo intactos nuestros valores de transparencia y cercanía.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
       <h2>Nuestra misión y valores</h2>
       <div class="grid cards-2">
         <article class="card">
@@ -116,6 +131,53 @@
           <h3>Sofía García</h3>
           <p class="role">Atención al cliente</p>
         </div>
+        <div class="member">
+          <img class="avatar" src="assets/images/avatar-1.webp" alt="Foto de nuevo miembro (placeholder)" loading="lazy">
+          <h3>Próximamente</h3>
+          <p class="role">Nuevo integrante</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" aria-label="Testimonios de clientes">
+      <h2>Opiniones de nuestros clientes</h2>
+      <div class="grid cards-2">
+        <article class="card">
+          <div class="card-body">
+            <div class="card-meta" style="display:flex; align-items:center; gap:.5rem; margin-bottom:.25rem;">
+              <span class="badge" aria-label="Origen Google">Google</span>
+              <strong>Lucía y Pedro</strong>
+              <span style="color: var(--color-muted);">· mayo 2025</span>
+            </div>
+            <div aria-label="5 de 5" title="5 de 5" style="color: var(--color-accent); line-height:1; margin-bottom:.5rem;">★★★★★</div>
+            <h3 class="card-title">Operación impecable</h3>
+            <p class="card-meta">“Nos acompañaron en todo el proceso de venta. La tasación fue precisa y logramos cerrar rápido.”</p>
+          </div>
+        </article>
+        <article class="card">
+          <div class="card-body">
+            <div class="card-meta" style="display:flex; align-items:center; gap:.5rem; margin-bottom:.25rem;">
+              <span class="badge" aria-label="Origen Google">Google</span>
+              <strong>Franco R.</strong>
+              <span style="color: var(--color-muted);">· abril 2025</span>
+            </div>
+            <div aria-label="5 de 5" title="5 de 5" style="color: var(--color-accent); line-height:1; margin-bottom:.5rem;">★★★★★</div>
+            <h3 class="card-title">Atención y transparencia</h3>
+            <p class="card-meta">“Excelente asesoría para comprar nuestro primer departamento. Todo claro desde el primer día.”</p>
+          </div>
+        </article>
+        <article class="card">
+          <div class="card-body">
+            <div class="card-meta" style="display:flex; align-items:center; gap:.5rem; margin-bottom:.25rem;">
+              <span class="badge" aria-label="Origen Google">Google</span>
+              <strong>Mariana S.</strong>
+              <span style="color: var(--color-muted);">· marzo 2025</span>
+            </div>
+            <div aria-label="5 de 5" title="5 de 5" style="color: var(--color-accent); line-height:1; margin-bottom:.5rem;">★★★★★</div>
+            <h3 class="card-title">Alquiler sin complicaciones</h3>
+            <p class="card-meta">“Opciones verificadas y gestión ágil. Encontré el alquiler ideal en una semana.”</p>
+          </div>
+        </article>
       </div>
     </section>
 
