--- a/inmobiliaria/index.html
+++ b/inmobiliaria/index.html
@@ -52,7 +52,7 @@
           </div>
         </article>
         <article class="card">
-          <img class="card-media" src="https://images.unsplash.com/photo-1526455192312-1436e1b03654?q=80&w=1200&auto=format&fit=crop" alt="Agente inmobiliario atendiendo clientes" loading="lazy">
+          <img class="card-media" src="https://img.freepik.com/foto-gratis/agente-inmobiliario-masculino-haciendo-negocios-mostrando-casa-posible-pareja-compradora_23-2150164697.jpg?semt=ais_hybrid&w=740&q=80" alt="Agente inmobiliario atendiendo clientes" loading="lazy">
           <div class="card-body">
             <h3 class="card-title">Eficacia</h3>
             <p class="card-meta">Somos los mejores en la industria inmobiliria y lo demostramos en la forma de nuestro trabajo</p>
